# docker

./: .gitignore  README.md  build-and-push.sh
.github/workflows/: dockerimage.yml
cpu/base/: Dockerfile  build.sh  push.sh  requirements.txt
cpu/mlflow/: Dockerfile  build.sh  push.sh  run.sh
cpu/multimodal/: Dockerfile  requirements.txt
cpu/multimodal-ja/: Dockerfile  requirements.txt
cpu/nlp-ja/: Dockerfile  requirements.txt
cpu/table/: Dockerfile  build.sh  push.sh  run.sh
gpu/base/: Dockerfile  build.sh  push.sh  pyproject.toml  requirements.txt
gpu/image/: Dockerfile  build.sh  push.sh  requirements.txt  run.sh  setup.py
gpu/lightgbm-gpu/: Dockerfile
gpu/multimodal/: Dockerfile  build.sh  push.sh  requirements.txt  run.sh
gpu/multimodal-ja/: Dockerfile  build.sh  push.sh  pyproject.toml  requirements.txt  run.sh  test.sh
gpu/multimodal-ja/tests/: test_lightgbm.py  test_neologdn.py  test_nltk.py  test_pillow.py  test_sudachi.py  test_tensorflow.py
gpu/table/: Dockerfile  build.sh  kill.sh  push.sh  requirements.txt  run.sh  test.sh
gpu/table-cudf/: Dockerfile  build.sh
gpu/table/tests/: test_cuml.py  test_lightgbm.py  test_tensorflow.py
