[tool.poetry]
name = "ml-base-gpu"
version = "0.1.0"
description = ""
authors = ["takaiyuk"]

[tool.poetry.dependencies]
python = "=3.6.9"
catboost = "^0.24.2"
category-encoders = "^2.2.2"
Cython = "~0.29.21"
dataclasses = "=0.7.0"
fsspec = "=0.6.3"
h5py = "^2.10.0"
hydra-core = "^1.0.3"
ipywidgets = "=7.5.1"
isort = "^5.6.4"
japanize-matplotlib = "=1.1.3"
joblib = "^0.17.0"
jupyterlab = "^2.2.9"
kaggle = "=1.5.9"
keras = "=2.4.0"
matplotlib = "^3.3.2"
ml_metrics = "^0.1.4"
mlflow = "^1.11.0"
numba = "^0.51.2"
numpy = "~1.18.5"
omegaconf = "^2.0.3"
optuna = "^2.2.0"
pandas = "^1.1.4"
plotly = "=4.14.1"
pyarrow = "=0.15.0"
pytest = "^6.1.2"
scikit-learn = "=0.23.2"
scipy = "^1.5.4"
seaborn = "^0.11.0"
streamlit = "^0.71.0"
tensorflow = "=2.3.1"
tsfresh = "^0.17.0"
tqdm = "^4.51.0"
torch = "=1.7.0"
torchvision = "=0.8.1"
xgboost = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
