[tool.poetry]
name = "base"
version = "0.1.0"
description = ""
authors = ["takaiyuk"]

[tool.poetry.dependencies]
python = "~3.8.0"
catboost = "^0.25.1"
category-encoders = "^2.2.2"
Cython = "=0.29.23"
hydra-core = "^1.0.6"
japanize-matplotlib = "=1.1.3"
joblib = "^1.0.1"
jupyterlab = "^3.0.16"
kaggle = "=1.5.9"
matplotlib = "^3.4.2"
ml_metrics = "=0.1.4"
mlflow = "^1.17.0"
numba = "^0.53.1"
numpy = "=1.19.2"
nyaggle = "=0.1.4"
omegaconf = "^2.0.6"
optuna = "^2.7.0"
pandas = "^1.2.4"
plotly = "^4.14.3"
protobuf = "=3.15.8"
scikit-learn = "^0.23.2"
seaborn = "^0.11.1"
streamlit = "^0.82.0"
tensorflow = "=2.5.0"
tornado = "^6.1"
tsfresh = "=0.17.0"
tqdm = "^4.60.0"
torch = "=1.7.0"
torchvision = "=0.8.1"
xgboost = "^1.4.2"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
flake8 = "^3.9.2"
isort = "^5.8.0"
mypy = "^0.812"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
