[tool.poetry]
name = "multimodal_ja"
version = "0.1.0"
description = ""
authors = ["takaiyuk"]

[tool.poetry.dependencies]
python = "^3.8"
albumentations = "^0.5.2"
gensim = "^4.0.1"
ginza = "^4.0.5"
janome = "^0.4.1"
mecab-python3 = "^1.0.3"
neologdn = "^0.5.1"
nltk = "^3.6.2"
opencv-contrib-python = "^4.2.0"
Pillow = "^8.2.0"
spacy = "=2.3.5"
sudachipy = "=0.5.2"
sudachidict_core = "=20201223.post1"
timm = "^0.4.9"
ttach = "^0.0.3"
transformers = "^4.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
